--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,3 +1,16 @@
-<h1>Package</h1>
+<div class='row'>
+  <div class="small-12 columns">
+    <div class="panel text-center">
+      <h1>Package</h1>
+    </div>
+  </div>
+</div>
 
-<%= link_to "New Shipment", new_package_path %>
+<div class="row">
+  <div class="small-12 text-center columns">
+
+      <%= link_to "New Shipment", new_package_path, class: :button %>
+
+  </div>
+
+</div>
