--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -8,9 +8,19 @@
 
 <div class="row">
   <div class="small-12 text-center columns">
-
-      <%= link_to "New Shipment", new_package_path, class: :button %>
-
+    <%= link_to "New Shipment", new_package_path, class: :button %>
   </div>
-
 </div>
+
+<% if @postage_label %>
+<div class="row">
+  <div class="small-6 text-center columns">
+    <%= image_tag @postage_label %>
+  </div>
+  <div class="small-6 text-center columns">
+      <form>
+        <input class="button" type="button" value="Print this page" onClick="window.print()">
+      </form>
+  </div>
+</div>
+<% end %>
