--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -8,7 +8,7 @@
 
 <div class="row">
   <div class="small-12 text-center columns">
-    <%= link_to "New Shipment", new_package_path, class: :button %>
+    <%= link_to "New Shipment", new_package_path, class: :button, method: :get %>
   </div>
 </div>
 
