--- a/app/views/packages/new.html.erb
+++ b/app/views/packages/new.html.erb
@@ -16,7 +16,7 @@
 
 <div class="row">
   <div class="medium-4 columns panel callout">
-    <%= form_tag("/easyposts", method: "post", id: :postageForm) do %>
+    <%= form_tag("/easyposts", method: "post") do %>
     <%= label_tag(:recipient_name, "Recipient Name:") %>
     <%= text_field_tag(:recipient_name) %>
     <br>
@@ -110,11 +110,9 @@
     <%= label_tag(:parcel_weight, "Parcel Weight:") %>
     <%= text_field_tag(:parcel_weight) %>
     <div class="text-center">
-      <%= submit_tag("Buy Postage", class: "button success", id: "buyPostage")%>
+      <%= submit_tag("Buy Postage", class: "button success")%>
+  <% end %>
     </div>
   </div>
 
-  <br>
-  <br>
-  <% end %>
 </div>
