address is now validated thru address model

--- a/app/views/packages/new.html.erb
+++ b/app/views/packages/new.html.erb
@@ -16,7 +16,7 @@
 
 <div class="row">
   <div class="medium-4 columns panel callout">
-    <%= form_tag("/easyposts", method: "post") do %>
+    <%= form_tag("/packages", method: "post") do %>
     <%= label_tag(:recipient_name, "Recipient Name:") %>
     <%= text_field_tag :recipient_name, nil, required: true %>
     <br>
