user can now view package history

--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -9,6 +9,7 @@
 <div class="row">
   <div class="small-12 text-center columns">
     <%= link_to "New Shipment", new_package_path, class: :button, method: :get %>
+    <%= link_to "Package History", packages_show_path, class: :button, method: :get %>
   </div>
 </div>
 
