created partial for navbar

--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,10 +1,5 @@
-<div class='row'>
-  <div class="small-12 columns">
-    <div class="panel text-center">
-      <h1>Package</h1>
-    </div>
-  </div>
-</div>
+<% content_for :title, "Package" %>
+<%= render 'shared/navbar', title: "Package" %>
 
 <div class="row">
   <div class="small-12 text-center columns">
